# Cubobezier

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Cubobezier  Makefile  cmake_install.cmake  imgui.ini
src/: main.cpp
src/Camera/: Camera.cpp  Camera.hpp
src/File/: File.cpp  File.hpp
src/Object/: Object.cpp  Object.hpp
src/Shader/: Shader.cpp  Shader.hpp
src/Window/: Window.cpp  Window.hpp
